--- a/pom.xml
+++ b/pom.xml
@@ -78,5 +78,6 @@
 	</build>
 	<modules>
 		<module>pulse-monitoring-analyzer</module>
+		<module>pulse-monitoring-avg-reducer</module>
 	</modules>
 </project>
