--- a/pulse-monitoring-notification-data-provider/src/main/resources/application.properties
+++ b/pulse-monitoring-notification-data-provider/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.url=jdbc:postgresql://mel.db.elephantsql.com/rfvxxyfb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.maximum-pool-size=1
+
+### SQL trace options
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
