--- a/pulse-monitoring-notification-data-provider/pom.xml
+++ b/pulse-monitoring-notification-data-provider/pom.xml
@@ -20,5 +20,10 @@
 		<artifactId>postgresql</artifactId>
 		<scope>runtime</scope>
 	</dependency> 
+	<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
 </project>
