--- a/pulse-monitoring-avg-reducer/pom.xml
+++ b/pulse-monitoring-avg-reducer/pom.xml
@@ -6,4 +6,10 @@
     <version>0.0.1</version>
   </parent>
   <artifactId>pulse-monitoring-avg-reducer</artifactId>
+  <dependencies>
+	  <dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-data-redis</artifactId>
+	  </dependency>
+  </dependencies>
 </project>
