--- a/pulse-monitoring-avg-reducer/src/test/resources/application.properties
+++ b/pulse-monitoring-avg-reducer/src/test/resources/application.properties
@@ -1,6 +1,4 @@
-spring.main.banner-mode=off
+spring.main.banner-mode = off
  
-logging.level.telran=debug
-
-logging.level.root=WARN
-
+logging.level.telran = trace
+logging.level.root = WARN
