--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,7 @@
 		<module>pulse-monitoring-jumps-notifier</module>
 		<module>pulse-monitoring-notification-data-provider</module>
 		<module>pulse-monitoring-avg-populator</module>
+		<module>avg-values-back-office</module>
+		<module>visits-back-office</module>
 	</modules>
 </project>
