--- a/pulse-monitoring-jumps-notifier/src/main/resources/application.properties
+++ b/pulse-monitoring-jumps-notifier/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.main.banner-mode = off
+
+spring.kafka.bootstrap-servers=glider.srvs.cloudkafka.com:9094
+spring.kafka.properties.security.protocol=SASL_SSL
+spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
+spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="yldbkfxk" password="${CLOUDKARAFKA_PASSWORD}";
+spring.cloud.stream.bindings.jumpsConsumer-in-0.destination=yldbkfxk-jumps
+spring.cloud.stream.bindings.jumpsConsumer-in-0.group=yldbkfxk-notifier
  
 logging.level.telran = debug
 logging.level.root = WARN
