HW_79 configuration of parameters and pom files

--- a/avg-values-back-office/src/main/resources/application.properties
+++ b/avg-values-back-office/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://shac:860614@cluster0.5daz6wz.mongodb.net/pulse-probes?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://shac:${MONGO_PASSWORD}@cluster0.5daz6wz.mongodb.net/pulse-probes?retryWrites=true&w=majority
 
 logging.level.telran = trace
 #logging.level.root = debug
