--- a/pulse-monitoring-analyzer/src/main/resources/application.properties
+++ b/pulse-monitoring-analyzer/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.cloud.stream.bindings.pulseProbeConsumer-in-0.destination=yldbkfxk-defaul
 spring.cloud.stream.bindings.pulseProbeConsumer-in-0.group=yldbkfxk-analyzer
 
 app.binding.name=jumps-out-0
-spring.cloud.stream.bindings.jump-out-0.destination=yldbkfxk-jumps
+spring.cloud.stream.bindings.jumps-out-0.destination=yldbkfxk-jumps
 
 spring.data.redis.host=redis-17335.c265.us-east-1-2.ec2.cloud.redislabs.com
 spring.data.redis.port=17335
