--- a/pulse-monitoring-avg-reducer/src/main/resources/application.properties
+++ b/pulse-monitoring-avg-reducer/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.destination=yldbkfxk-def
 spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.group=yldbkfxk-reducer
 
 app.binding.name=average-out-0
+app.reducing.size=3
 spring.cloud.stream.bindings.average-out-0.destination=yldbkfxk-avg-values
 
 spring.data.redis.host=redis-17335.c265.us-east-1-2.ec2.cloud.redislabs.com
