--- a/pulse-monitoring-avg-reducer/src/test/resources/application.properties
+++ b/pulse-monitoring-avg-reducer/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 spring.main.banner-mode = off
 
 app.binding.name=average-out-0
+app.reducing.size=2
  
 logging.level.telran = trace
 logging.level.root = WARN
