--- a/avg-values-back-office/pom.xml
+++ b/avg-values-back-office/pom.xml
@@ -16,6 +16,11 @@
 		<artifactId>spring-boot-starter-data-mongodb</artifactId>
 	</dependency>
 	<dependency>
+		<groupId>telran.monitoring</groupId>
+		<artifactId>pulse-monitoring-mongo-repository</artifactId>
+		<version>0.0.1</version>
+	</dependency>
+	<dependency>
 		<groupId>de.flapdoodle.embed</groupId>
 		<artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
 		<version>4.5.2</version>
