--- a/pulse-monitoring-analyzer/src/test/resources/application.properties
+++ b/pulse-monitoring-analyzer/src/test/resources/application.properties
@@ -3,6 +3,8 @@ spring.main.banner-mode = off
 logging.level.telran = trace
 logging.level.root = WARN
 
+app.binding.name=jumps-out-0
+
 ### SQL trace options
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
