--- a/pulse-monitoring-avg-populator/src/main/resources/application.properties
+++ b/pulse-monitoring-avg-populator/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.
 spring.cloud.stream.bindings.avgPulseConsumer-in-0.destination=yldbkfxk-avg-values
 spring.cloud.stream.bindings.avgPulseConsumer-in-0.group=yldbkfxk-populator
 
-spring.data.mongodb.uri=mongodb+srv://shac:860614@cluster0.5daz6wz.mongodb.net/pulse-probes?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://shac:${MONGO_PASSWORD}@cluster0.5daz6wz.mongodb.net/pulse-probes?retryWrites=true&w=majority
 
 logging.level.telran = trace
 #logging.level.root = debug
