--- a/pulse-monitoring-jumps-notifier/src/main/resources/application.properties
+++ b/pulse-monitoring-jumps-notifier/src/main/resources/application.properties
@@ -4,9 +4,21 @@ spring.kafka.bootstrap-servers=glider.srvs.cloudkafka.com:9094
 spring.kafka.properties.security.protocol=SASL_SSL
 spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="yldbkfxk" password="${CLOUDKARAFKA_PASSWORD}";
+
 spring.cloud.stream.bindings.jumpsConsumer-in-0.destination=yldbkfxk-jumps
 spring.cloud.stream.bindings.jumpsConsumer-in-0.group=yldbkfxk-notifier
  
-logging.level.telran = debug
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sharovarovm
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.debug=true
+ 
+logging.level.telran = trace
 logging.level.root = WARN
 
+app.data.provider.mapping.url=visits/last
+app.data.provider.host=localhost
+app.data.provider.port=8080
