--- a/pulse-monitoring-notification-data-provider/pom.xml
+++ b/pulse-monitoring-notification-data-provider/pom.xml
@@ -21,9 +21,14 @@
 		<scope>runtime</scope>
 	</dependency> 
 	<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>test</scope>
-		</dependency>
+		<groupId>telran.monitoring</groupId>
+		<artifactId>pulse-monitoring-jpa-repository</artifactId>
+		<version>0.0.1</version>
+	</dependency>
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
 </project>
