--- a/visits-back-office/pom.xml
+++ b/visits-back-office/pom.xml
@@ -16,6 +16,11 @@
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency> 
 	<dependency>
+		<groupId>telran.monitoring</groupId>
+		<artifactId>pulse-monitoring-jpa-repository</artifactId>
+		<version>0.0.1</version>
+	</dependency>
+	<dependency>
 		<groupId>org.postgresql</groupId>
 		<artifactId>postgresql</artifactId>
 		<scope>runtime</scope>
