--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.4</version>
+		<version>3.0.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>telran.monitoring</groupId>
@@ -89,5 +89,6 @@
 		<module>pulse-monitoring-avg-populator</module>
 		<module>avg-values-back-office</module>
 		<module>visits-back-office</module>
+		<module>pulse-monitoring-configuration-server</module>
 	</modules>
 </project>
