--- a/pulse-monitoring-analyzer/src/test/resources/application.properties
+++ b/pulse-monitoring-analyzer/src/test/resources/application.properties
@@ -9,3 +9,5 @@ app.binding.name=jumps-out-0
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.cloud.config.enabled=false
