HW_80 configuration management for all services

--- a/avg-values-back-office/src/main/resources/application.properties
+++ b/avg-values-back-office/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://shac:${MONGO_PASSWORD}@cluster0.5daz6wz.mongodb.net/pulse-probes?retryWrites=true&w=majority
-
-logging.level.telran = trace
-#logging.level.root = debug
+spring.application.name=avg-values-back-office
+spring.config.import=optional:configserver:http://localhost:8888
