--- a/pulse-monitoring-avg-populator/src/main/resources/application.properties
+++ b/pulse-monitoring-avg-populator/src/main/resources/application.properties
@@ -1,12 +1,2 @@
-spring.kafka.bootstrap-servers=glider.srvs.cloudkafka.com:9094
-spring.kafka.properties.security.protocol=SASL_SSL
-spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="yldbkfxk" password="${CLOUDKARAFKA_PASSWORD}";
-
-spring.cloud.stream.bindings.avgPulseConsumer-in-0.destination=yldbkfxk-avg-values
-spring.cloud.stream.bindings.avgPulseConsumer-in-0.group=yldbkfxk-populator
-
-spring.data.mongodb.uri=mongodb+srv://shac:${MONGO_PASSWORD}@cluster0.5daz6wz.mongodb.net/pulse-probes?retryWrites=true&w=majority
-
-logging.level.telran = trace
-#logging.level.root = debug
+spring.application.name=avg-populator
+spring.config.import=optional:configserver:http://localhost:8888
