--- a/pulse-monitoring-avg-reducer/src/main/resources/application.properties
+++ b/pulse-monitoring-avg-reducer/src/main/resources/application.properties
@@ -1,18 +1,2 @@
-spring.kafka.bootstrap-servers=glider.srvs.cloudkafka.com:9094
-spring.kafka.properties.security.protocol=SASL_SSL
-spring.kafka.properties.sasl.mechanism=SCRAM-SHA-256
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="yldbkfxk" password="${CLOUDKARAFKA_PASSWORD}";
-spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.destination=yldbkfxk-default
-spring.cloud.stream.bindings.pulseProbeConsumerAvg-in-0.group=yldbkfxk-reducer
-
-app.binding.name=average-out-0
-app.reducing.size=3
-spring.cloud.stream.bindings.average-out-0.destination=yldbkfxk-avg-values
-
-spring.data.redis.host=redis-17335.c265.us-east-1-2.ec2.cloud.redislabs.com
-spring.data.redis.port=17335
-spring.data.redis.username=default
-spring.data.redis.password=${REDIS_PASSWORD}
-
-logging.level.telran = trace
-#logging.level.root = debug
+spring.application.name=avg-reducer
+spring.config.import=optional:configserver:http://localhost:8888
