--- a/avg-values-back-office/src/test/resources/application.properties
+++ b/avg-values-back-office/src/test/resources/application.properties
@@ -8,3 +8,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 de.flapdoodle.mongodb.embedded.version=4.0.2
 
+spring.cloud.config.enabled=false
