--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		  	<artifactId>spring-cloud-config-client</artifactId>
+	  	</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
