--- a/pulse-monitoring-avg-populator/src/test/resources/application.properties
+++ b/pulse-monitoring-avg-populator/src/test/resources/application.properties
@@ -7,3 +7,5 @@ spring.data.mongodb.database=test
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 de.flapdoodle.mongodb.embedded.version=4.0.2
+
+spring.cloud.config.enabled=false
