--- a/pulse-monitoring-notification-data-provider/src/main/resources/application.properties
+++ b/pulse-monitoring-notification-data-provider/src/main/resources/application.properties
@@ -1,17 +1,2 @@
-spring.main.banner-mode = off
- 
-logging.level.telran = debug
-logging.level.root = WARN
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.password=${POSTGRES_PASSWORD}
-spring.datasource.username=rfvxxyfb
-spring.datasource.url=jdbc:postgresql://mel.db.elephantsql.com/rfvxxyfb
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.hikari.maximum-pool-size=1
-
-### SQL trace options
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type.descriptor.sql=trace
+spring.application.name=data-provider
+spring.config.import=optional:configserver:http://localhost:8888
