--- a/visits-back-office/src/test/resources/application.properties
+++ b/visits-back-office/src/test/resources/application.properties
@@ -7,3 +7,5 @@ logging.level.root = WARN
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.cloud.config.enabled=false
