--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=jumps-notifier
+spring.application.name=gateway
 spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.fail-fast=true
 spring.cloud.config.retry.initial-interval=30000
