--- a/pulse-monitoring-notification-data-provider/pom.xml
+++ b/pulse-monitoring-notification-data-provider/pom.xml
@@ -30,5 +30,10 @@
 		<artifactId>h2</artifactId>
 		<scope>test</scope>
 	</dependency>
+	 <dependency>
+		<groupId>telran.exception-handling-library</groupId>
+	  	<artifactId>exception-handling-library</artifactId>
+	  	<version>0.0.1</version>
+	</dependency>
   </dependencies>
 </project>
