--- a/visits-back-office/src/main/resources/application.properties
+++ b/visits-back-office/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=visit-back-office
 spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.initial-interval=30000
+spring.cloud.config.retry.max-interval=100000
