--- a/pulse-monitoring-jumps-notifier/src/main/resources/application.properties
+++ b/pulse-monitoring-jumps-notifier/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=jumps-notifier
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
 spring.cloud.config.fail-fast=true
 spring.cloud.config.retry.initial-interval=30000
 spring.cloud.config.retry.max-interval=100000
